// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 renders correctly 1`] = `
<h2
  className={undefined}
>
  test h2
</h2>
`;

exports[`H2 renders correctly with CSS class 1`] = `
<h2
  className="title"
>
  test h2
</h2>
`;
